marvel-api/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: "Poppins", sans-serif;
  }
  body {
    background-color: #e01a38;
  }
  .container {
    background-color: #171821;
    width: 90%;
    max-width: 500px;
    margin: 0 auto;
    padding: 3em 2em;
    position: absolute;
    transform: translateX(-50%);
    left: 50%;
    right: 50%;
    top: 1em;
    border-radius: 1em;
  }
  .input-container {
    display: grid;
    grid-template-columns: 9fr 3fr;
    gap: 1em;
  }
  input {
    padding: 1em 0.5em;
    background-color: #3a3939;
    color: #ffffff;
    border: none;
    border-radius: 0.5em;
    outline: none;
  }
  button {
    outline: none;
    border: none;
    background-color: #e01a38;
    color: #ffffff;
    border-radius: 0.5em;
  }
  .display-container {
    padding: 1em;
  }
  .container-character-image {
    background-color: #ffffff;
    padding: 0.5em;
    height: 9.37em;
    width: 9.37em;
    display: block;
    margin: auto;
    border-radius: 50%;
  }
  .container-character-image img {
    width: 100%;
    position: relative;
    width: block;
    border-radius: 30%;
  }
  .character-name {
    margin: 30px;
    padding: 0.5em 0 0.8em 0;
    text-align: center;
    color: #ffffff;
    text-transform: uppercase;
    font-size: 1.2em;
    font-weight: 600;
  }
  .character-description {
    margin-top: -20px;
    text-align: justify;
    color: #a0a0a6;
    line-height: 2em;
    font-weight: 300;
  }
  .list {
    position: absolute;
    width: 64%;
    background-color: #555;
    color: #ffffff;
    z-index: 1;
  }
  .autocomplete-items {
    padding: 0.5em;
  }
  .autocomplete-items:hover {
    background-color: #ddd;
    color: #171821;
  }

